# wagtail-code-blog

./: .env  .gitignore  .gitlab-ci.yml  .pylintrc  .travis.yml  MANIFEST.in  README.md  Taskfile.yml  manage.py  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tailwind.config.js  tox.ini
.github/: release-drafter.yml
.github/workflows/: ci-cd.yml  lint.yml  release-drafter.yml  release.yml  test.yml
tests/: settings.py  test_pages.py  tests.py  urls.py
tests/settings/: base.py  local.py  test.py
wagtail_code_blog/: apps.py  models.py
wagtail_code_blog/migrations/: 0001_initial.py  0002_auto_20200302_0745.py  0003_auto_20200307_0845.py  0004_auto_20200317_1728.py  0005_blogindexpage_search_image.py  0006_alter_blogpage_intro.py
wagtail_code_blog/static/wagtail_code_blog/: input.css
wagtail_code_blog/static/wagtail_code_blog/css/: blog_index_page.css  blog_page.css  markdown_code_blocks.css  pygments.css  responsive_width.css
wagtail_code_blog/templates/wagtail_code_blog/: blog_index_page.html  blog_index_page_body.html  blog_index_page_head.html  blog_page.html  blog_page_body.html  blog_page_head.html  static_dependencies.html
wagtail_code_blog/templatetags/: debug.py
