[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wagtail-code-blog"
version = "0.6.1"
description = "A wagtail code blog"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["wagtail", "django", "blog", "cms"]
authors = [{ name = "Dani Hodovic", email = "dani.hodovic@gmail.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "Django>=5.2",
  "wagtail>=6.0",
  "wagtail-metadata>=5.0",
  "readtime>=3.0",
  "beautifulsoup4>=4.0",
  "django-json-ld>=0.0",
  "django-model-utils>=5.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "tox>=4.25.0",
  "coverage>=7.8.0",
  "django-stubs>=5.1.3",
  "django-model-utils>=5.0.0",
  "mypy>=1.15.0",
  "pylint>=3.3.6",
  "pylint-django>=2.6.1",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.0",
  "pytest-django>=4.11.0",
  "pytest-gitignore>=1.3",
  "djlint>=1.36.4",
  "pudb>=2024.1.3",
  "django-extensions>=3.2.3",
  "django-browser-reload>=1.12.1",
  "wagtail-markdown>=0.10.0",
  "werkzeug>=3.0.1",
]

[project.urls]
Homepage = "https://github.com/honeylogic-io/wagtail-code-blog"
Documentation = "https://github.com/honeylogic-io/wagtail-code-blog"
Repository = "https://github.com/honeylogic-io/wagtail-code-blog"

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = ["wagtail_code_blog"]
artifacts = ["wagtail_code_blog/static/**", "wagtail_code_blog/templates/**"]
force-include = { "wagtail_code_blog/static/wagtail_code_blog/output.css" = "wagtail_code_blog/static/wagtail_code_blog/output.css" }

[tool.hatch.build.targets.sdist]
force-include = { "wagtail_code_blog/static/wagtail_code_blog/output.css" = "wagtail_code_blog/static/wagtail_code_blog/output.css" }

[tool.pytest.ini_options]
addopts = "--ds=tests.settings --reuse-db --pdbcls=pudb.debugger:Debugger"
python_files = "tests.py test_*.py"
norecursedirs = ".git */migrations/* */static/* venv .venv .virtualenv node_modules"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "venv", "virtualenv", "migrations", "node_modules", ".tox"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["wagtail_code_blog"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]
exclude = [".venv", "migrations.*"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pylint.'MASTER']
load-plugins = "pylint_django"
ignore = "manage.py"

[tool.pylint.'FORMAT']
max-line-length = 150

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-docstring,invalid-name,logging-fstring-interpolation,fixme,duplicate-code"

[tool.pylint.'DESIGN']
max-parents = 13

[tool.pylint.'SIMILARITIES']
# Minimum lines number of a similarity.
min-similarity-lines = 4
# Ignore comments when computing similarities.
ignore-comments = "yes"
# Ignore docstrings when computing similarities.
ignore-docstrings = "yes"
# Ignore imports when computing similarities.
ignore-imports = "yes"

[tool.djlint]
ignore = "H006,H030,H031"
profile = "django"
preserve_blank_lines = true
use_gitignore = true
format_css = true
format_js = true
